RESOLVED FIXED147217
REGRESSION(r182236): Justified Arabic text does not expand
https://bugs.webkit.org/show_bug.cgi?id=147217
Summary REGRESSION(r182236): Justified Arabic text does not expand
Myles C. Maxfield
Reported 2015-07-22 19:14:33 PDT
Justified Arabic text does not expand
Attachments
Patch (3.71 KB, patch)
2015-07-22 19:18 PDT, Myles C. Maxfield
no flags
Patch (5.05 KB, patch)
2015-07-22 19:23 PDT, Myles C. Maxfield
simon.fraser: review+
Myles C. Maxfield
Comment 1 2015-07-22 19:18:44 PDT
Myles C. Maxfield
Comment 2 2015-07-22 19:23:30 PDT
Simon Fraser (smfr)
Comment 3 2015-07-22 19:32:57 PDT
Comment on attachment 257324 [details] Patch Is this testable?
Simon Fraser (smfr)
Comment 4 2015-07-22 19:35:10 PDT
Comment on attachment 257324 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=257324&action=review > Source/WebCore/platform/graphics/mac/ComplexTextController.cpp:682 > + bool firstCharacter = !(characterIndex + complexTextRun.stringLocation()); firstCharacter doesn't sound boolean. isFirstCharacter? hasFirstCharacter?
Myles C. Maxfield
Comment 5 2015-07-23 11:32:40 PDT
(In reply to comment #3) > Comment on attachment 257324 [details] > Patch > > Is this testable? It is tested by fast/text/international/arabic-justify.html (which is currently failing)
Myles C. Maxfield
Comment 6 2015-07-23 12:16:39 PDT
Radar WebKit Bug Importer
Comment 7 2015-07-23 12:28:10 PDT
Note You need to log in before you can comment on or make changes to this bug.