REGRESSION(r182236): Justified Arabic text does not expand https://bugs.webkit.org/show_bug.cgi?id=147217

Reviewed by Simon Fraser.

When I was writing r182236, I got confused between the levels of the string hierarchy in ComplexTextController.
I've added a comment in the header which should make it easier to get it right.

Test: fast/text/international/arabic-justify.html

* platform/graphics/mac/ComplexTextController.cpp:
(WebCore::ComplexTextController::adjustGlyphsAndAdvances):
* platform/graphics/mac/ComplexTextController.h:

Canonical link: https://commits.webkit.org/165299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187244 268f45cc-cd09-0410-ab3c-d52691b4dbfc